Change deployed services definitions

--- a/IWSVelib/App.config
+++ b/IWSVelib/App.config
@@ -11,8 +11,8 @@
   de l'hôte. System.Configuration ne prend pas en charge les fichiers de configuration des bibliothèques. -->
   <system.serviceModel>
     <services>
-      <service name="IWSVelib.Service1">
-        <endpoint address="" binding="basicHttpBinding" contract="IWSVelib.IService1">
+      <service name="IWSVelib.VelibService">
+        <endpoint address="" binding="basicHttpBinding" contract="IWSVelib.IVelibService">
           <identity>
             <dns value="localhost" />
           </identity>
