--- a/IWSVelib/IWSVelib.csproj
+++ b/IWSVelib/IWSVelib.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contract.cs" />
     <Compile Include="IVelibService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VelibService.cs" />
