ÂWorking Docker service

--- a/VelibClient/App.config
+++ b/VelibClient/App.config
@@ -7,12 +7,16 @@
         <bindings>
             <basicHttpBinding>
                 <binding name="BasicHttpBinding_IVelibService" />
+                <binding name="BasicHttpBinding_IVelibService1" />
             </basicHttpBinding>
         </bindings>
         <client>
             <endpoint address="http://localhost:8733/Design_Time_Addresses/IWSVelib/Service1/"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IVelibService"
                 contract="VelibService.IVelibService" name="BasicHttpBinding_IVelibService" />
+            <endpoint address="http://localhost:8090/VelibService.svc" binding="basicHttpBinding"
+                bindingConfiguration="BasicHttpBinding_IVelibService1" contract="VelibServiceDocker.IVelibService"
+                name="BasicHttpBinding_IVelibService1" />
         </client>
     </system.serviceModel>
 </configuration>
