--- a/IWSVelibCore/IWSVelibCore.csproj
+++ b/IWSVelibCore/IWSVelibCore.csproj
@@ -11,6 +11,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="SoapCore" Version="0.9.6" />
     <PackageReference Include="System.ServiceModel.Http" Version="4.4.1" />
     <PackageReference Include="System.ServiceModel.Primitives" Version="4.4.1" />
   </ItemGroup>
@@ -20,9 +22,19 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\IWSVelibApp\IWSVelibApp.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="System.ServiceModel">
       <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.1\System.ServiceModel.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="VelibService.svc.cs">
+      <DependentUpon>VelibService.svc</DependentUpon>
+    </Compile>
   </ItemGroup>
 
 </Project>
