--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: '3'
 services:
   iwsvelibcore:
     image: iwsvelibcore
+    ports:
+      - "8090:5050"
     build:
       context: .
       dockerfile: IWSVelibCore\Dockerfile
