Separate Docker Client

--- a/VelibClientDocker/App.config
+++ b/VelibClientDocker/App.config
@@ -10,9 +10,9 @@
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:8733/Design_Time_Addresses/IWSVelib/Service1/"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IVelibService"
-                contract="VelibService.IVelibService" name="BasicHttpBinding_IVelibService" />
+            <endpoint address="http://localhost:8090/VelibService.svc" binding="basicHttpBinding"
+                bindingConfiguration="BasicHttpBinding_IVelibService" contract="VelibServiceDotNetCore.IVelibService"
+                name="BasicHttpBinding_IVelibService" />
         </client>
     </system.serviceModel>
 </configuration>
