--- a/VelibClientGUI/VelibClientGUI.csproj
+++ b/VelibClientGUI/VelibClientGUI.csproj
@@ -72,7 +72,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="Connected Services\VelibService\IWSVelib.xsd">
+    <None Include="Connected Services\VelibService\IWSVelibLib.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Connected Services\VelibService\service.wsdl" />
