Docker release works

--- a/IWSVelibCore/Dockerfile
+++ b/IWSVelibCore/Dockerfile
@@ -2,7 +2,7 @@ FROM microsoft/aspnetcore:2.0-nanoserver-1709 AS base
 WORKDIR /app
 EXPOSE 80
 
-FROM microsoft/aspnetcore-build:2.0-nanoserver-1709 AS build
+FROM microsoft/aspnetcore-build:2.0.5-2.1.4 AS build
 WORKDIR /src
 COPY *.sln ./
 COPY IWSVelibCore/IWSVelibCore.csproj IWSVelibCore/
