--- a/IWSVelibEventsLib/IWSVelibEventsLib.csproj
+++ b/IWSVelibEventsLib/IWSVelibEventsLib.csproj
@@ -47,6 +47,7 @@
     <Compile Include="IVelibService.cs" />
     <Compile Include="IVelibServiceEvents.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequestInfo.cs" />
     <Compile Include="VelibService.cs" />
   </ItemGroup>
   <ItemGroup>
