--- a/VelibClient/App.config
+++ b/VelibClient/App.config
@@ -8,11 +8,21 @@
             <basicHttpBinding>
                 <binding name="BasicHttpBinding_IVelibService" />
             </basicHttpBinding>
+            <wsDualHttpBinding>
+                <binding name="WSDualHttpBinding_IVelibService" />
+            </wsDualHttpBinding>
         </bindings>
         <client>
             <endpoint address="http://localhost:8733/Design_Time_Addresses/IWSVelib/Service1/"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IVelibService"
                 contract="VelibService.IVelibService" name="BasicHttpBinding_IVelibService" />
+            <endpoint address="http://localhost:8733/Design_Time_Addresses/IWSVelibEventsLib/Service1/"
+                binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IVelibService"
+                contract="VelibServiceEvents.IVelibService" name="WSDualHttpBinding_IVelibService">
+                <identity>
+                    <dns value="localhost" />
+                </identity>
+            </endpoint>
         </client>
     </system.serviceModel>
 </configuration>
